--- a/restful-web-services/src/main/resources/application.properties
+++ b/restful-web-services/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.messages.basename=messages
+management.security.enabled=false
+spring.security.user.name=agi
+spring.security.user.password=FFF#
