--- a/restful-web-services/src/main/resources/application.properties
+++ b/restful-web-services/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.messages.basename=messages
 management.security.enabled=false
 spring.security.user.name=agi
 spring.security.user.password=FFF#
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
